New paragraph still not being scrubbed correctly.  Will attempt again.

--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -271,7 +271,7 @@
                 transcriptToAppend = transcriptToAppend.replace('.',' period');
                 transcriptToAppend = transcriptToAppend.replace(',', ' comma');
                 transcriptToAppend = transcriptToAppend.replace(':', ' colon');
-                transcriptToAppend = transcriptToAppend.replace('\n', ' new paragraph');
+                transcriptToAppend = transcriptToAppend.replace('\n\n', ' new paragraph');
             }
 
             if(currentRecognitionResult.isFinal)
