Corrected punctuation in comment.

--- a/synthesis_demo.html
+++ b/synthesis_demo.html
@@ -112,7 +112,7 @@
                  * has voices installed.
                  *
                  * Testing has shown that the window.speechSynthesis.onvoiceschanged event may
-                 * be triggered multiple times.  Therefore care should be taken in writing the
+                 * be triggered multiple times.  Therefore, care should be taken in writing the
                  * payload function.  It will need to be written in a "de-bounce" manner such
                  * that it won't cause any issues if it is executed multiple times.
                  */
