--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -208,9 +208,9 @@
             var sessionInstance = this;
             function scopePreserverWrapper(desiredFunctionToExecute, sessionInstance)
             {
-
-                return function combinedEventHandler_onstart(event)
+                return function (event)
                 {
+                    console.log("Entering scopePreserverWrapper payload.");
                     if(sessionInstance)
                     {
                         console.log(sessionInstance.getPrivateString());
@@ -220,7 +220,9 @@
                     {
                         desiredFunctionToExecute(event);
                     }
+                    console.log("Leaving scopePreserverWrapper payload.");
                 };
+
             }
 
             if(_recognition)
