--- a/synthesis_demo.html
+++ b/synthesis_demo.html
@@ -8,13 +8,14 @@
 -- To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-sa/4.0/.
 --
 -->
+<!DOCTYPE html>
 <html>
     <head>
         <title>JavaScript Speech API Library Demo</title>
     </head>
     <body>
         <section id="section_NoJSWarning">
-            <div id="div_NoJavaScriptWarning" name="div_NoJavaScriptWarning">
+            <div id="div_NoJavaScriptWarning">
                 <p>
                     Sorry!  Your browser does not appear to have JavaScript enabled.  Please enable JavaScript in your browser for this site to function correctly.
                 </p>
@@ -25,22 +26,22 @@
         </section>
         <section id="section_SpeechSynthesis">
 
-            <div id="div_SpeechSynthesisNotSupportedWarning" name="div_SpeechSynthesisNotSupportedWarning" style="display:none;">
+            <div id="div_SpeechSynthesisNotSupportedWarning" style="display:none;">
                 <p>OOPS!</p>
                 <p>Your browser does not appear to support the Speech Synthesis API.  Please see  <a href="http://caniuse.com/#feat=speech-synthesis" target="_blank">caniuse.com</a> for a list of capable browsers.</p>
             </div>
-            <div id="div_LoadingVoices" name="div_LoadingVoices" style="display:none;">
+            <div id="div_LoadingVoices" style="display:none;">
                 <p>Yay!  Your browser had indicated that it supports the Speech Synthesis API!</p>
                 <p>If you're seeing this message, we've asked your browser for a list of available voices and are waiting for a reply.  Please be patient...</p>
             </div>
-            <div id="div_NoVoicesWarning" name="div_NoVoicesWarning" style="display:none;">
+            <div id="div_NoVoicesWarning" style="display:none;">
                 <p>OOPS!</p>
                 <p>While your browser is indicating that it supports the Speech Synthesis API, it has not responded to our request in a timely fashion.</p>
                 <p>This could be caused by a number of different reasons.  The most likely of which is that your browser may not officially support the Speech Synthesis API at this time.</p>
                 <p>Please see  <a href="http://caniuse.com/#feat=speech-synthesis" target="_blank">caniuse.com</a> for a list of capable browsers.</p>
             </div>
-            <div id="div_speechSynthesisInputs" name="div_speechSynthesisInputs" style="display:none;">
-                <input id='input_speechSynthesis' name='input_speechSynthesis' size='128' value='Son of Jor-El, kneel before Zahd!' /> <!-- I know 'Zahd' should be 'Zod', but speech synthesis often requires phonetic spellings!-->
+            <div id="div_speechSynthesisInputs" style="display:none;">
+                <input id="input_speechSynthesis" name="input_speechSynthesis" size='128' value='Son of Jor-El, kneel before Zahd!' /> <!-- I know 'Zahd' should be 'Zod', but speech synthesis often requires phonetic spellings!-->
                 <button onclick="SpeechAPI.SpeechSynthesis.utter(document.getElementById('input_speechSynthesis').value);">Go!</button>
             </div>
 
