--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -8,13 +8,14 @@
 -- To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-sa/4.0/.
 --
 -->
+<!DOCTYPE html>
 <html>
 <head>
     <title>JavaScript Speech API Library Demo</title>
 </head>
 <body>
 <section id="section_NoJSWarning">
-    <div id="div_NoJavaScriptWarning" name="div_NoJavaScriptWarning">
+    <div id="div_NoJavaScriptWarning">
         <p>
             Sorry!  Your browser does not appear to have JavaScript enabled.  Please enable JavaScript in your browser for this site to function correctly.
         </p>
@@ -24,11 +25,11 @@
     </div>
 </section>
 <section id="section_STT">
-    <div id="div_STTNotSupportedWarning" name="div_TTSNotSupportedWarning" style="display:none;">
+    <div id="div_STTNotSupportedWarning" style="display:none;">
         <p>OOPS!</p>
         <p>Your browser does not appear to support the Speech Recognition API.  Please see  <a href="http://caniuse.com/#feat=speech-recognition" target="_blank">caniuse.com</a> for a list of capable browsers.</p>
     </div>
-    <div id="div_sttInputs" name="div_sttInputs" style="display:none;">
+    <div id="div_sttInputs" style="display:none;">
 
         <button id='button_sttStart' onclick="recognitionStartClickEventHandler();">Start Recognition</button>
         <button id='button_sttStop' onclick="recognitionStopClickEventHandler();" style="display:none;">Stop Recognition</button>
@@ -107,13 +108,13 @@
             }
 
             return result;
-        }
+        };
 
         //Public functions:
         this.getPrivateString = function()
         {
             return _privateString;
-        }
+        };
 
         this.appendToPrivateString = function(desiredText)
         {
@@ -122,7 +123,7 @@
             {
                 _privateString+=desiredText;
             }
-        }
+        };
 
         this.startRequested = function()
         {
@@ -160,6 +161,7 @@
             else
             {
                 var logMessage = LOG_PREFIX+"ERROR: Recognition object was null!";
+                console.log(logMessage);
             }
         };
 
