recognition_demo.html: Added mutator function to ContinuousSession class to enable the setting of an onerror event handler.

--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -247,6 +247,17 @@
             }
         };
 
+        this.setEventHandler_onerror = function(desiredFunctionToExecute)
+        {
+            if(_recognition)
+            {
+                if(isFunction(desiredFunctionToExecute))
+                {
+                    _recognition.onresult=desiredFunctionToExecute;
+                }
+            }
+        };
+
         this.setEventHandler_onstart = function(desiredFunctionToExecute,executeOnRequestOnly)
         {
             var sessionInstance = this;
