recognition_demo.html: Added TODO statements for future work.

--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -260,6 +260,9 @@
 
                     console.log(event);
 
+                    //TODO: Determine error type and behave according to encountered error!
+                    //TODO: Maybe set an error encountered flag and or restart session flag to restart if the error type is something like 'no-speech'?
+
                     if(desiredSessionInstance)
                     {
                         try
