Revert "recognition_demo.html: Modified logging for debugging."
This reverts commit 9fc6a3e5a0761df6382ebc156f5a8482863331f0.

--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -420,21 +420,18 @@
 
 
     test.setEventHandler_onend(function onEndEventHandler(event){
-        var handlerName = "onend";
-        console.log("Entering supplied event handler for:"+handlerName);
-        console.log("Leaving supplied event handler for:"+handlerName);
+        console.log("Recognition ended.");
+        console.log("Stop Requested: "+test.stopRequested());
     });
 
     test.setEventHandler_onstart(function onStartEventHandler(event){
-        var handlerName = "onstart";
-        console.log("Entering supplied event handler for:"+handlerName);
-        console.log("Leaving supplied event handler for:"+handlerName);
+        console.log("Recognition started.");
+        console.log("Start Requested: "+test.startRequested());
     });
 
     test.setEventHandler_onerror(function onErrorEventHandler(event){
-        var handlerName = "onerror";
-        console.log("Entering supplied event handler for:"+handlerName);
-        console.log("Leaving supplied event handler for:"+handlerName);
+        console.log("Recognition error!");
+        console.log(event);
     });
 
     test.setEventHandler_onresult(function onResultEventHandler(event){
