Revert "recognition_demo.html: Corrected syntax errors."
This reverts commit 4443d5de201e2fe46e2bf95dab49d2d0998e4973.

--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -265,7 +265,7 @@
 
                             if(!desiredSessionInstance.startRequested())
                             {
-                                var logMessage = "Requesting stop.";
+                                var logMessage = "Requesting stop.");
                                 console.log(logMessage);
                                 desiredSessionInstance.stop();
                             }
@@ -339,7 +339,7 @@
 
                             if(!desiredSessionInstance.stopRequested())
                             {
-                                var logMessage = "Requesting start.";
+                                var logMessage = "Requesting start.");
                                 console.log(logMessage);
                                 desiredSessionInstance.start();
                             }
