--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -76,20 +76,13 @@
 <script>
     function ContinuousSession()
     {
-        //Private constants
-        var _CLASS_NAME           = function(){return "ContinuousSession";};
-        var _STRING_TYPE          = function(){return "string";};
-        var _EMPTY_STRING         = function(){return "";};
-        var _FUNCTION_TYPE_STRING = function(){return "function";};
-
         //Private variables:
+        var _CLASS_NAME                = "ContinuousSession";
         var _startRequested            = false;
         var _stopRequested             = false;
         var _recognition               = null;
-        var _interimTranscript         = "";
-        var _finalTranscript           = "";
 
-
+        var _privateString = "private message";
 
         if(SpeechAPI.SpeechToText.isSupported())
         {
@@ -101,69 +94,34 @@
         //Private functions:
         function isFunction(desiredVariable)
         {
+            var FUNCTION_TYPE_STRING = "function";
+
             var result = false;
 
             if(desiredVariable)
             {
-                if(typeof(desiredVariable)==_FUNCTION_TYPE_STRING)
+                if(typeof(desiredVariable)==FUNCTION_TYPE_STRING)
                 {
                     result = true;
                 }
 
-            }
-
-            return result;
-        };
-
-        function isString(desiredVariable)
-        {
-            var result = false;
-
-            if(desiredVariable)
-            {
-                if(typeof(desiredVariable)==_STRING_TYPE)
-                {
-                    result = true;
-                }
             }
 
             return result;
         };
 
         //Public functions:
-        this.getInterimTranscript = function()
+        this.getPrivateString = function()
         {
-            return _interimTranscript;
+            return _privateString;
         };
 
-        this.resetInterimTranscript()
+        this.appendToPrivateString = function(desiredText)
         {
-            _interimTranscript="";
-        };
 
-        this.appendToInterimTranscript = function(desiredText)
-        {
-            if(isString(desiredText))
+            if(desiredText)
             {
-                _interimTranscript+=desiredText;
-            }
-        };
-
-        this.getFinalTranscript = function()
-        {
-            return _finalTranscript;
-        };
-
-        this.resetFinalTranscript()
-        {
-            _finalTranscript="";
-        };
-
-        this.appendToFinalTranscript = function(desiredText)
-        {
-            if(isString(desiredText))
-            {
-                _finalTranscript+=desiredText;
+                _privateString+=desiredText;
             }
         };
 
@@ -247,51 +205,35 @@
             }
         };
 
-        this.setEventHandler_onstart = function(desiredFunctionToExecute,executeOnRequestOnly)
+        this.setEventHandler_onstart = function(desiredFunctionToExecute)
         {
             var sessionInstance = this;
 
-            function onstart_scopePreserverWrapper(desiredFunctionToExecute, executeOnRequestOnly, desiredSessionInstance)
+            function onstart_scopePreserverWrapper(desiredFunctionToExecute, desiredSessionInstance)
             {
                 return function onstart_scopePreserverWrapperReturnPayload(event)
                 {
-                    var executeDesiredFunctionToExecute = false;
+                    console.log("Entering onstart_scopePreserverWrapperReturnPayload().");
                     if(desiredSessionInstance)
                     {
                         try
                         {
-                            var logMessage = "Recognition Started.  Requested: "+desiredSessionInstance.startRequested()+".";
-                            console.log(logMessage);
-
-                            if(!desiredSessionInstance.startRequested())
-                            {
-                                var logMessage = "Requesting stop.");
-                                console.log(logMessage);
-                                desiredSessionInstance.stop();
-                            }
+                            desiredSessionInstance.appendToPrivateString(".  Hi!  I'm appended!");
+                            console.log(desiredSessionInstance.getPrivateString());
                         }
                         catch(caughtException)
                         {
                             console.log("ERROR: An exception was encountered when attempting to work with the recognition session instance.");
                             console.log(caughtException);
                         }
+
                     }
 
                     if(desiredFunctionToExecute)
                     {
                         try
                         {
-                            if(executeOnRequestOnly)
-                            {
-                                if(desiredSessionInstance)
-                                {
-                                    desiredFunctionToExecute(event);
-                                }
-                            }
-                            else
-                            {
-                                desiredFunctionToExecute(event);
-                            }
+                            desiredFunctionToExecute(event);
                         }
                         catch(caughtException)
                         {
@@ -299,6 +241,7 @@
                             console.log(caughtException);
                         }
                     }
+                    console.log("Leaving onstart_scopePreserverWrapperReturnPayload().");
                 };
             }
 
@@ -306,7 +249,7 @@
             {
                 try
                 {
-                    _recognition.onstart = onstart_scopePreserverWrapper(desiredFunctionToExecute,executeOnRequestOnly,sessionInstance);
+                    _recognition.onstart = onstart_scopePreserverWrapper(desiredFunctionToExecute,sessionInstance);
                 }
                 catch(caughtException)
                 {
@@ -321,77 +264,25 @@
             }
         };
 
-        this.setEventHandler_onend = function(desiredFunctionToExecute,executeOnRequestOnly)
+        this.setEventHandler_onend = function(desiredFunctionToExecute)
         {
-            var sessionInstance = this;
-
-            function onend_scopePreserverWrapper(desiredFunctionToExecute, executeOnRequestOnly, desiredSessionInstance)
-            {
-                return function onend_scopePreserverWrapperReturnPayload(event)
-                {
-                    var executeDesiredFunctionToExecute = false;
-                    if(desiredSessionInstance)
-                    {
-                        try
-                        {
-                            var logMessage = "Recognition stopped.  Requested: "+desiredSessionInstance.startRequested()+".";
-                            console.log(logMessage);
-
-                            if(!desiredSessionInstance.stopRequested())
-                            {
-                                var logMessage = "Requesting start.");
-                                console.log(logMessage);
-                                desiredSessionInstance.start();
-                            }
-                        }
-                        catch(caughtException)
-                        {
-                            console.log("ERROR: An exception was encountered when attempting to work with the recognition session instance.");
-                            console.log(caughtException);
-                        }
-                    }
-
-                    if(desiredFunctionToExecute)
-                    {
-                        try
-                        {
-                            if(executeOnRequestOnly)
-                            {
-                                if(desiredSessionInstance)
-                                {
-                                    desiredFunctionToExecute(event);
-                                }
-                            }
-                            else
-                            {
-                                desiredFunctionToExecute(event);
-                            }
-                        }
-                        catch(caughtException)
-                        {
-                            console.log("ERROR: An exception was encountered when attempting to execute the desired recognition.onstart event handler.");
-                            console.log(caughtException);
-                        }
-                    }
-                };
-            }
-
             if(_recognition)
             {
-                try
+                if (isFunction(desiredFunctionToExecute))
                 {
-                    _recognition.onend = onend_scopePreserverWrapper(desiredFunctionToExecute,executeOnRequestOnly, sessionInstance);
+                    _recognition.onend = desiredFunctionToExecute;
                 }
-                catch(caughtException)
-                {
-                    console.log("ERROR: An exception was encountered when attempting to assign the recognition.onstart event handler.");
-                    console.log(caughtException);
-                }
-
             }
-            else
+        };
+
+        this.setEventHandler_onerror = function(desiredFunctionToExecute)
+        {
+            if(_recognition)
             {
-                console.log("Error: Unable to assign onstart event handler. Recognition object not set.");
+                if (isFunction(desiredFunctionToExecute))
+                {
+                    _recognition.onerror = desiredFunctionToExecute;
+                }
             }
         };
 
