recognition_demo.html: Added the following private constants to the ContinuousSession class: _CLASS_NAME, _STRING_TYPE, _EMPTY_STRING, and _FUNCTION_TYPE_STRING.  Also added the following private variables to the ContinuousSession class: _interimTranscript and _finalTranscript.

--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -76,11 +76,20 @@
 <script>
     function ContinuousSession()
     {
+
+        //Private constants
+        var _CLASS_NAME           = function(){return "ContinuousSession";};
+        var _STRING_TYPE          = function(){return "string";};
+        var _EMPTY_STRING         = function(){return "";};
+        var _FUNCTION_TYPE_STRING = function(){return "function";};
+
         //Private variables:
-        var _CLASS_NAME                = "ContinuousSession";
+        //var _CLASS_NAME                = "ContinuousSession";
         var _startRequested            = false;
         var _stopRequested             = false;
         var _recognition               = null;
+        var _interimTranscript         = "";
+        var _finalTranscript           = "";
 
         var _privateString = "private message";
 
